<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context=".view.activity.MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include
                    android:id="@+id/main_toolbar"
                    layout="@layout/toolbar" />

                <FrameLayout
                    android:id="@+id/container_body"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>

        <!-- Your FAB implementation -->
        <shehan.com.migrainetrigger.utility.customview.SheetFab
            android:id="@+id/fab"
            style="@style/Widget.MaterialSheetFab.Fab"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin" />

        <!-- Overlay that dims the screen -->
        <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Circular reveal container for the sheet -->
        <io.codetail.widget.RevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|bottom"
            android:orientation="vertical">

            <!-- Sheet that contains your items -->
            <android.support.v7.widget.CardView
                android:id="@+id/fab_sheet"
                style="@style/Widget.MaterialSheetFab.Sheet"
                android:background="?android:attr/selectableItemBackground"
                tools:cardCornerRadius="2dp">

                <!-- Sheet items -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Basic -->
                    <TextView
                        android:id="@+id/fab_sheet_item_basic"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/new_fab_basic" />

                    <!-- Intermediate -->
                    <TextView
                        android:id="@+id/fab_sheet_item_intermediate"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/new_fab_inter" />

                    <!-- Full -->
                    <TextView
                        android:id="@+id/fab_sheet_item_full"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/new_fab_full" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </io.codetail.widget.RevealLinearLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />


</android.support.v4.widget.DrawerLayout>