<resources>
    <string name="app_name">Migraine Trigger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_severity">Severity</string>
    <string name="nav_answers">Answers</string>
    <string name="nav_f_a_q">F.A.Q.</string>
    <string name="nav_records">Records</string>
    <string name="nav_report">Report</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="app_icon">app icon</string>
    <string name="dev_name">M.S. Wickramarathne</string>
    <string name="app_version">v 2.0 - alpha</string>

    <string name="title_activity_add_record">AddRecordActivity</string>
    <string name="title_view_records">MigraineViewRecordsActivity</string>
    <string name="title_faq">MigraineFAQActivity</string>

    <string name="cancelButtonGeneral">Cancel</string>
    <string name="clear_selection">Clear</string>

    <string name="cancelButtonDialog">Dismiss</string>
    <string name="confirmButtonDialog">Confirm</string>

    <string name="migraineIntensityLevelDialog">Choose intensity</string>
    <string-array name="migraineIntensityLevel">
        <item>1 - Hurts a bit</item>
        <item>2 - Hurts a little</item>
        <item>3 - Hurts little more</item>
        <item>4 - Mild</item>
        <item>5 - Hurts more</item>
        <item>6 - Moderate</item>
        <item>7 - Hurts a lot</item>
        <item>8 - Severe</item>
        <item>9 - Hurts the most</item>
        <item>10 - Worst ever</item>
    </string-array>

    <string name="record_lbl_start">Start (required)</string>
    <string name="record_lbl_end">End</string>
    <string name="record_lbl_intensity">Intensity</string>
    <string name="record_txt_intensity_hint">click to set</string>
    <string name="record_txt_start_date_hint">Date</string>
    <string name="record_txt_start_time_hint">Time</string>
    <string name="record_txt_end_date_hint">Date</string>
    <string name="record_txt_end_time_hint">Time</string>
    <string name="record_lbl_location">Location</string>
    <string name="record_lbl_pain_in">Pain in</string>
    <string name="record_lbl_medicine">Medicine</string>
    <string name="record_lbl_effective_medicine">"   Effective medicine"</string>
    <string name="record_lbl_relief">Relief</string>
    <string name="record_lbl_effective_reliefs">"   Effective reliefs"</string>
    <string name="record_lbl_triggers">Triggers</string>
    <string name="record_lbl_symptoms">Symptoms</string>
    <string name="record_lbl_activities">Activities</string>
    <string name="record_txt_humidity">humidity</string>
    <string name="record_txt_pressure">pressure</string>
    <string name="record_lbl_weather">Weather</string>

    <string name="record_view_date">Start Time</string>
    <string name="record_view_duration">Duration</string>
    <string name="title_view_record">View record</string>
    <string name="title_view_report">View report</string>
    <string name="title_manage_answers">Manage answers</string>
    <string name="title_settings">Settings</string>
    <string name="content_desc_pressure">Pressure</string>
    <string name="content_desc_humidity">Humidity</string>
    <string name="content_desc_temperature">Temperature</string>
    <string name="report_from">"From "</string>
    <string name="report_to">" |  To "</string>
    <string name="report_total">Total</string>
    <string name="report_intensity">Intensity</string>
    <string name="report_average_duration">Average duration</string>
    <string name="record_no_enough_records">Not enough records</string>
    <string name="update_delete">Delete</string>
    <string name="update_sync">Sync</string>
    <string name="report_refresh">Refresh</string>

    <string name="manage_answers_triggers">Triggers</string>
    <string name="manage_answers_symptoms">Symptoms</string>
    <string name="manage_answers_activities">Activities</string>
    <string name="manage_answers_locations">Locations</string>
    <string name="manage_answers_pain_areas">Pain Areas</string>
    <string name="manage_answers_medicines">Medicines</string>
    <string name="manage_answers_reliefs">Reliefs</string>
    <string name="preferences_title_theme">Theme</string>
    <string name="preferences_title_backup">"Backup and Restore "</string>
    <string name="pref_backup">Backup</string>
    <string name="pref_restore">Restore</string>
    <string name="pref_theme_summery">Select the theme for Migraine Trigger</string>
    <string name="pref_theme_title">Application theme</string>
    <string name="pref_backup_summery">Backup application database</string>
    <string name="pref_restore_summery">Restore application database</string>
    <string name="pref_color_scheme_summery">Select color scheme for Migraine Trigger</string>
    <string name="pref_color_scheme_title">Application colors</string>
    <string name="splash_scree_background">Splash screen background</string>
    <string name="splash_screen_app_name">Migraine Trigger</string>
    <string name="about_opens_source_licenses">Open source licenses</string>
    <string name="report_down">▼</string>
    <string name="answers_drag_handler">drag handler</string>
    <string name="answers_cancel">Cancel</string>
    <string name="answers_save">Save</string>
    <string name="answers_add">Add</string>
    <string name="new_record_sync">Sync</string>
    <string name="pref_suggestions_summery">"Reorder answer list to show most used answers first "</string>
    <string name="pref_suggestions_title">"Answer suggestions "</string>
    <string name="pref_send_summery">"Send entire migraine records database via email "</string>
    <string name="pref_send_title">"Send statistics "</string>
    <string name="answers_filter">Filter</string>
    <string name="record_filter_title">Filter records</string>
    <string name="record_filter_btn_cancel">Cancel</string>
    <string name="record_filter_btn_clear">Clear</string>
    <string name="record_filter_btn_filter">Filter</string>
    <string name="weather_title">Weather average</string>
    <string name="home_help_no_data">Start by adding records, press + button</string>
    <string name="home_emoji">emoji</string>
    <string name="new_fab_basic">Basic</string>
    <string name="new_fab_inter">Intermediate</string>
    <string name="new_fab_full">Full</string>
    <string name="weather_credit_text">Powered by Dark Sky</string>
    <string name="addNewAnswer">New answer</string>

</resources>
